--- a/views/result.ejs
+++ b/views/result.ejs
@@ -12,5 +12,7 @@
         <img src="<%= movie["Poster"]%>" alt="Mountain View" style="width:304px;height:228px;">
         <li>Movie : <%= movie["Title"]%> - IMDB_id :<%= movie["imdbID"]%></li>
       <%}) %>
+
+      <a href = "/">Search Again</a>
   </body>
 </html>
